# boiler_gazebo

./: CMakeLists.txt  README.md  coverage_params.yaml  coverage_params.yaml~  package.xml
3dmap/: refined.ply  refined.stl
include/: Coverage.h  Filereader.h  Greedyplanner.h  Markers.h  Planner.h
launch/: boiler_gazebo.launch  coverage.launch  path_tracking.launch  rviz_launch_file.launch  tsp.launch  uvc_lib.launch~
meshes/: boiler.stl  boiler2000.stl  boiler5000.stl  refined_highbay.stl
msg/: Coorxyz.msg  djicommand.msg  trianglewithnormal.msg  triangularmesh.msg
rviz/: boiler_sim.rviz
src/: coverage.cpp  demo.cpp  generate_path.cpp  latestPath.csv  mesh.txt  offboard.cpp  orderingwp.cpp  planner.cpp  stlreader.cpp  test_file_backup.cpp  tsp_backup.cpp  tsp_lemon.cpp  uncovered_points.cpp  uncovered_points_eth.cpp
utils/: csv_wptopx4.py
worlds/: boiler_simulation.world  boiler_simulation.world~
